refs #105 .Debut de l'implementation des Bookmarks (voir a ajouter des infos personnalisable, par exemple pour les WebServices)

--- a/application.qrc
+++ b/application.qrc
@@ -79,6 +79,8 @@
         <file>images/pushbutton.png</file>
         <file>images/radiobutton.png</file>
         <file>images/textedit.png</file>
+        
+        <file>images/bookmark.png</file>
  
 		<file>translations/xinx_fr.qm</file>
 		<file>translations/qt_fr.qm</file>
