--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -199,27 +199,10 @@
           <property name="spacing" >
            <number>6</number>
           </property>
-          <item row="2" column="1" colspan="2" >
-           <widget class="QLabel" name="m_configurationVersionLabel" >
-            <property name="text" >
-             <string/>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="0" >
            <widget class="QLabel" name="label_8" >
             <property name="text" >
              <string>Version :</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0" >
-           <widget class="QLabel" name="label" >
-            <property name="text" >
-             <string>&amp;Lang</string>
-            </property>
-            <property name="buddy" >
-             <cstring>m_langComboBox</cstring>
             </property>
            </widget>
           </item>
@@ -303,6 +286,37 @@
               <iconset resource="../application.qrc" >:/images/firefox_logo.png</iconset>
              </property>
             </item>
+           </widget>
+          </item>
+          <item row="2" column="1" colspan="2" >
+           <widget class="QLabel" name="m_configurationVersionLabel" >
+            <property name="text" >
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QLabel" name="label" >
+            <property name="text" >
+             <string>&amp;Lang</string>
+            </property>
+            <property name="buddy" >
+             <cstring>m_langComboBox</cstring>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" >
+           <widget class="QLabel" name="label_13" >
+            <property name="text" >
+             <string>Presentation file :</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" colspan="2" >
+           <widget class="QLabel" name="m_presentationLabel" >
+            <property name="text" >
+             <string/>
+            </property>
            </widget>
           </item>
          </layout>
