--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -816,7 +816,7 @@
   <customwidget>
    <class>TabEditor</class>
    <extends>QTabWidget</extends>
-   <header>../src/tabeditor.h</header>
+   <header>tabeditor.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
