--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -1160,7 +1160,7 @@ p, li { white-space: pre-wrap; }
      <item>
       <widget class="QPushButton" name="okButton" >
        <property name="text" >
-        <string>OK</string>
+        <string>&amp;OK</string>
        </property>
        <property name="icon" >
         <iconset resource="../application.qrc" >:/images/button_ok.png</iconset>
@@ -1170,7 +1170,7 @@ p, li { white-space: pre-wrap; }
      <item>
       <widget class="QPushButton" name="cancelButton" >
        <property name="text" >
-        <string>Cancel</string>
+        <string>&amp;Cancel</string>
        </property>
        <property name="icon" >
         <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
