--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -647,7 +647,7 @@
         <bool>false</bool>
        </property>
        <property name="text" >
-        <string>OK</string>
+        <string>&amp;OK</string>
        </property>
        <property name="icon" >
         <iconset resource="../application.qrc" >:/images/button_ok.png</iconset>
@@ -657,7 +657,7 @@
      <item>
       <widget class="QPushButton" name="cancelButton" >
        <property name="text" >
-        <string>Cancel</string>
+        <string>&amp;Cancel</string>
        </property>
        <property name="icon" >
         <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
