--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -46,7 +46,7 @@
      <x>0</x>
      <y>0</y>
      <width>748</width>
-     <height>26</height>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="m_fileMenu" >
@@ -111,6 +111,7 @@
     </property>
     <addaction name="m_aboutAct" />
     <addaction name="m_aboutQtAct" />
+    <addaction name="m_aboutPluginsAct" />
    </widget>
    <widget class="QMenu" name="m_searchMenu" >
     <property name="title" >
@@ -815,6 +816,11 @@
   <action name="m_highlightWord" >
    <property name="text" >
     <string>Highlight same word</string>
+   </property>
+  </action>
+  <action name="m_aboutPluginsAct" >
+   <property name="text" >
+    <string>About Plugins</string>
    </property>
   </action>
  </widget>
