--- a/application.qrc
+++ b/application.qrc
@@ -57,6 +57,7 @@
         <file>images/network_outgoing_lan.png</file>
         <file>images/noeud.png</file>
         <file>images/portugal.png</file>
+        <file>images/project_close.png</file>
         <file>images/project_open.png</file>
         <file>images/pushbutton.png</file>
         <file>images/radiobutton.png</file>
@@ -82,6 +83,8 @@
         <file>images/variable.png</file>
         <file>images/warning.png</file>
         <file>images/window_new.png</file>
+        <file>images/typecss.png</file>
+        <file>images/typehtml.png</file>
         <file>qss/coffee.qss</file>
         <file>translations/qt_fr.qm</file>
         <file>translations/xinx_fr.qm</file>
