--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -736,11 +736,20 @@ p, li { white-space: pre-wrap; }
       <layout class="QGridLayout" >
        <item rowspan="2" row="0" column="0" >
         <layout class="QVBoxLayout" >
-         <property name="margin" >
-          <number>0</number>
-         </property>
          <property name="spacing" >
           <number>6</number>
+         </property>
+         <property name="leftMargin" >
+          <number>0</number>
+         </property>
+         <property name="topMargin" >
+          <number>0</number>
+         </property>
+         <property name="rightMargin" >
+          <number>0</number>
+         </property>
+         <property name="bottomMargin" >
+          <number>0</number>
          </property>
          <item>
           <widget class="QLabel" name="label_4" >
@@ -782,10 +791,22 @@ p, li { white-space: pre-wrap; }
           <string>Files informations</string>
          </property>
          <layout class="QGridLayout" >
-          <property name="margin" >
+          <property name="leftMargin" >
            <number>9</number>
           </property>
-          <property name="spacing" >
+          <property name="topMargin" >
+           <number>9</number>
+          </property>
+          <property name="rightMargin" >
+           <number>9</number>
+          </property>
+          <property name="bottomMargin" >
+           <number>9</number>
+          </property>
+          <property name="horizontalSpacing" >
+           <number>6</number>
+          </property>
+          <property name="verticalSpacing" >
            <number>6</number>
           </property>
           <item row="0" column="0" colspan="2" >
@@ -1097,6 +1118,13 @@ p, li { white-space: pre-wrap; }
            <widget class="QLabel" name="label_8" >
             <property name="text" >
              <string>Progress message: </string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0" >
+           <widget class="QCheckBox" name="m_changeLogCheckBox" >
+            <property name="text" >
+             <string>Update ChangeLog automatically</string>
             </property>
            </widget>
           </item>
