--- a/application.qrc
+++ b/application.qrc
@@ -19,6 +19,7 @@
         <file>images/configure.png</file>
         <file>images/datetimeedit.png</file>
         <file>images/down.png</file>
+        <file>images/edit-clear-locationbar-ltr.png</file>
         <file>images/edit-select-all.png</file>
         <file>images/edit.png</file>
         <file>images/editcopy.png</file>
