--- a/ui/xmlpresentationwidget.ui
+++ b/ui/xmlpresentationwidget.ui
@@ -10,19 +10,44 @@
    </rect>
   </property>
   <property name="windowTitle" >
-   <string>Form</string>
+   <string/>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="margin" >
+  <layout class="QGridLayout" >
+   <property name="leftMargin" >
     <number>0</number>
    </property>
-   <property name="spacing" >
-    <number>6</number>
+   <property name="topMargin" >
+    <number>0</number>
    </property>
-   <item>
+   <property name="rightMargin" >
+    <number>0</number>
+   </property>
+   <property name="bottomMargin" >
+    <number>0</number>
+   </property>
+   <property name="horizontalSpacing" >
+    <number>0</number>
+   </property>
+   <property name="verticalSpacing" >
+    <number>3</number>
+   </property>
+   <item row="0" column="0" colspan="2" >
     <widget class="QComboBox" name="m_presentationComboBox" />
    </item>
-   <item>
+   <item row="1" column="0" >
+    <widget class="QToolButton" name="m_clearToolButton" >
+     <property name="text" >
+      <string>...</string>
+     </property>
+     <property name="icon" >
+      <iconset resource="../application.qrc" >:/images/edit-clear-locationbar-ltr.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" >
+    <widget class="QLineEdit" name="m_filtreLineEdit" />
+   </item>
+   <item row="2" column="0" colspan="2" >
     <widget class="QTreeView" name="m_presentationTreeView" >
      <property name="dragEnabled" >
       <bool>true</bool>
@@ -32,7 +57,7 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item row="3" column="0" colspan="2" >
     <widget class="QProgressBar" name="m_presentationProgressBar" >
      <property name="value" >
       <number>0</number>
@@ -44,6 +69,25 @@
    </item>
   </layout>
  </widget>
- <resources/>
- <connections/>
+ <resources>
+  <include location="../application.qrc" />
+ </resources>
+ <connections>
+  <connection>
+   <sender>m_clearToolButton</sender>
+   <signal>clicked()</signal>
+   <receiver>m_filtreLineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>17</x>
+     <y>40</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>55</x>
+     <y>40</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
