--- a/ui/xmlpresentationwidget.ui
+++ b/ui/xmlpresentationwidget.ui
@@ -89,5 +89,21 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>m_presentationComboBox</sender>
+   <signal>activated(int)</signal>
+   <receiver>m_filtreLineEdit</receiver>
+   <slot>clear()</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>102</x>
+     <y>15</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>101</x>
+     <y>44</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
 </ui>
